Added some explanation in the README.md file, and a bunch of TODOs in the build.config.

--- a/build.config
+++ b/build.config
@@ -141,6 +141,9 @@ EXTRA_CXXFLAGS=\
 	-std=c++11
 
 
+# ######################################################################
+# TODO: Add in a way to provide extra linker flags
+#
 
 # ######################################################################
 # The default compilers are gcc and g++. If you want to specify something
@@ -154,5 +157,9 @@ EXTRA_CXXFLAGS=\
 # You can comment this out with no ill-effects.
 GCC=gcc
 GXX=g++
+
+# ######################################################################
+# TODO: Add in a way to override the default linker
+#
 
 
