Added support for passing linker and linker flags.

--- a/build.config
+++ b/build.config
@@ -142,8 +142,20 @@ EXTRA_CXXFLAGS=\
 
 
 # ######################################################################
-# TODO: Add in a way to provide extra linker flags
+# You can add in extra flags to the linker here, for the library. This
+# does not override the existing flags, it adds to them.
 #
+EXTRA_LIB_LDFLAGS=\
+	
+
+
+# ######################################################################
+# You can add in extra flags to the linker here, for the programs. This
+# does not override the existing flags, it adds to them.
+#
+EXTRA_PROG_LDFLAGS=\
+	
+
 
 # ######################################################################
 # The default compilers are gcc and g++. If you want to specify something
@@ -157,6 +169,8 @@ EXTRA_CXXFLAGS=\
 # You can comment this out with no ill-effects.
 GCC=gcc
 GXX=g++
+LD_PROG=gcc
+LD_LIB=gcc
 
 # ######################################################################
 # TODO: Add in a way to override the default linker
