PROGRESS: Changed the build.config file to be suitable for a multi-library project. The necessary changes in the Makefile have not been done yet.

--- a/large/build.config
+++ b/large/build.config
@@ -1,95 +1,76 @@
 # ######################################################################
-# First, set your project name and version here.
+# First, set your meta-project name and version here.
 PROJNAME=skeleton
 VERSION=3.14.59
 
 # ######################################################################
-# Set the main (executable) source files. These are all the source files
-# that have a 'main' function. Note that you must specify the filename
-# without the extension, so don't specify 'myfile.c', just specify
-# 'myfile'.
+# List the sub-projects here. Each sub-project will have all of its
+# sources compiled and linked into a single library file (.so/.dll and
+# .a). The exception are those sources that have a `main()` entry point;
+# they get compiled into a program and linked against all the libraries.
+#
+# Each of the sub-projects must reside in a subdirectory of the same name
+# as the sub-project. The order specified here is the order of the
+# dependencies.
+SUBPROJS=\
+   proj-one\
+   proj-two\
+   proj-three
+
+
+# ######################################################################
+# Set the main (executable) C source files. These are all the source
+# files that have a 'main' function. Note that you must specify the
+# filename without the extension, so don't specify 'myfile.c', just
+# specify 'myfile'. The format of this setting is:
+#     subproj-name/main-prog
+# where `subprog-name` is a sub-project specified above and `main-prog`
+# is the name of the file.
 #
 # Note that this list is only for C files.
 MAIN_PROGRAM_CSOURCEFILES=\
-	example1_cli
+   proj-one/c_main \
+   proj-two/c_main \
+   proj-three/c_main
 
 # ######################################################################
-# Set the main (executable) source files. These are all the source files
-# that have a 'main' function. Note that you must specify the filename
-# without the extension, so don't specify 'myfile.c', just specify
-# 'myfile'.
+# Set the main (executable) CPP source files. These are all the source
+# files that have a 'main' function. Note that you must specify the
+# filename without the extension, so don't specify 'myfile.c', just
+# specify 'myfile'. The format of this setting is:
+#     subproj-name/main-prog
+# where `subprog-name` is a sub-project specified above and `main-prog`
+# is the name of the file.
 #
 # Note that this list is only for C++ files.
 MAIN_PROGRAM_CPPSOURCEFILES=\
-	example2_cli
-
-# ######################################################################
-# Set each of the source files that must be built. These are all those
-# source files (both .c and .cpp) that *DON'T* have a main function. All
-# of these files will be compiled into a single library (sorry, I do not
-# have plans to allow multiple library files to be built).
-#
-# Note once again that you must not specify the file extension.
-# Unfortunately you are not allowed to have two object files that have the
-# same name save for the extension. For example, you cannot have 'myfile.c'
-# and 'myfile.cpp' in the same project, although it is allowed
-# (encouraged even) to have either 'myfile.c' or 'myfile.cpp' together
-# with 'myfile.h'.
-#
-# Note that this list is only for C files.
-LIBRARY_OBJECT_CSOURCEFILES=\
-	module_one
-
-# ######################################################################
-# Set each of the source files that must be built. These are all those
-# source files (both .c and .cpp) that *DON'T* have a main function. All
-# of these files will be compiled into a single library (sorry, I do not
-# have plans to allow multiple library files to be built).
-#
-# Note once again that you must not specify the file extension.
-# Unfortunately you are not allowed to have two object files that have the
-# same name save for the extension. For example, you cannot have 'myfile.c'
-# and 'myfile.cpp' in the same project, although it is allowed
-# (encouraged even) to have either 'myfile.c' or 'myfile.cpp' together
-# with 'myfile.h'.
-#
-# Note that this list is only for C++ files.
-LIBRARY_OBJECT_CPPSOURCEFILES=\
-	module_two
-
-
-# ######################################################################
-# For now we set the headers manually. In the future I plan to use gcc to
-# generate the dependencies that can be included in this file. Simply name
-# all the header files you wrote for this project. Note that unlike the
-# previous settings, for this setting you must specify the path to the
-# headers (relative to this directory).
-HEADERS=\
-	src/module_one.h\
-	src/module_two.h
+   proj-one/cpp_main \
+   proj-two/cpp_main \
+   proj-three/cpp_main
 
 
 # ######################################################################
 # Here you must set the list of include paths. Note that the variable
 # $(HOME) is available if you have include directories relative to your
-# home directory. $(HOME) works correctly on Windows as well.
+# home directory. $(HOME) works correctly on Windows. Additionally all
+# environment variables work here as well.
 #
 # You can put as many paths in here as you want to. I've put one in as an
 # example.
 INCLUDE_PATHS=\
-	$(HOME)/include
+   $(HOME)/include
 
 # ######################################################################
 # This is similar to the INCLUDE_PATHS you set above, except that it is
 # for the library search paths. $(HOME) is available if you have library
 # directories relative to your home directory. $(HOME) works correctly
-# on Windows as well.
+# on Windows, and all environment variables work here as well.
 #
 # You can put as many paths in here as you want to. I've put one in as an
 # example. See the variable LIBRARY_FILES to set the actual libraries you
 # want to link in.
 LIBRARY_PATHS=\
-	$(HOME)/lib
+   $(HOME)/lib
 
 
 # ######################################################################
@@ -107,7 +88,7 @@ LIBRARY_PATHS=\
 # (If it is not commented out, go ahead and comment it out when the build
 # fails)
 #LIBRARY_FILES=\
-#	ds
+#   ds
 
 
 # ######################################################################
@@ -117,8 +98,8 @@ LIBRARY_PATHS=\
 # Note that this does not override the existing flags, it only adds to
 # them
 EXTRA_COMPILER_FLAGS=\
-	-DNAME=Value\
-	-W -Wall
+   -DNAME=Value\
+   -W -Wall
 
 
 # ######################################################################
@@ -128,7 +109,7 @@ EXTRA_COMPILER_FLAGS=\
 # Note that this does not override the existing flags, it only adds to
 # them
 EXTRA_CFLAGS=\
-	-std=c99
+   -std=c99
 
 
 # ######################################################################
@@ -138,7 +119,7 @@ EXTRA_CFLAGS=\
 # Note that this does not override the existing flags, it only adds to
 # them
 EXTRA_CXXFLAGS=\
-	-std=c++11
+   -std=c++11
 
 
 # ######################################################################
@@ -146,7 +127,6 @@ EXTRA_CXXFLAGS=\
 # does not override the existing flags, it adds to them.
 #
 EXTRA_LIB_LDFLAGS=\
-	
 
 
 # ######################################################################
@@ -154,7 +134,6 @@ EXTRA_LIB_LDFLAGS=\
 # does not override the existing flags, it adds to them.
 #
 EXTRA_PROG_LDFLAGS=\
-	
 
 
 # ######################################################################
