Changed the genmake.config file to be a proper includable bash script.

--- a/large/genmake.config
+++ b/large/genmake.config
@@ -12,10 +12,11 @@ VERSION=3.14.59
 # Each of the sub-projects must reside in a subdirectory of the same name
 # as the sub-project. The order specified here is the order of the
 # dependencies.
-SUBPROJS=\
-   proj-one\
-   proj-two\
+SUBPROJS='
+   proj-one
+   proj-two
    proj-three
+   '
 
 
 # ######################################################################
@@ -28,10 +29,11 @@ SUBPROJS=\
 # is the name of the file.
 #
 # Note that this list is only for C files.
-MAIN_PROGRAM_CSOURCEFILES=\
-   proj-one/c_main \
-   proj-two/c_main \
+MAIN_PROGRAM_CSOURCEFILES='
+   proj-one/c_main
+   proj-two/c_main
    proj-three/c_main
+   '
 
 # ######################################################################
 # Set the main (executable) CPP source files. These are all the source
@@ -43,10 +45,11 @@ MAIN_PROGRAM_CSOURCEFILES=\
 # is the name of the file.
 #
 # Note that this list is only for C++ files.
-MAIN_PROGRAM_CPPSOURCEFILES=\
-   proj-one/cpp_main \
-   proj-two/cpp_main \
+MAIN_PROGRAM_CPPSOURCEFILES='
+   proj-one/cpp_main
+   proj-two/cpp_main
    proj-three/cpp_main
+   '
 
 
 # ######################################################################
@@ -57,8 +60,9 @@ MAIN_PROGRAM_CPPSOURCEFILES=\
 #
 # You can put as many paths in here as you want to. I've put one in as an
 # example.
-INCLUDE_PATHS=\
+INCLUDE_PATHS='
    $(HOME)/include
+   '
 
 # ######################################################################
 # This is similar to the INCLUDE_PATHS you set above, except that it is
@@ -69,8 +73,9 @@ INCLUDE_PATHS=\
 # You can put as many paths in here as you want to. I've put one in as an
 # example. See the variable LIBRARY_FILES to set the actual libraries you
 # want to link in.
-LIBRARY_PATHS=\
+LIBRARY_PATHS='
    $(HOME)/lib
+   '
 
 
 # ######################################################################
@@ -97,9 +102,10 @@ LIBRARY_PATHS=\
 #
 # Note that this does not override the existing flags, it only adds to
 # them
-EXTRA_COMPILER_FLAGS=\
-   -DNAME=Value\
+EXTRA_COMPILER_FLAGS='
+   -DNAME=Value
    -W -Wall
+   '
 
 
 # ######################################################################
@@ -108,8 +114,9 @@ EXTRA_COMPILER_FLAGS=\
 #
 # Note that this does not override the existing flags, it only adds to
 # them
-EXTRA_CFLAGS=\
+EXTRA_CFLAGS='
    -std=c99
+   '
 
 
 # ######################################################################
@@ -118,22 +125,25 @@ EXTRA_CFLAGS=\
 #
 # Note that this does not override the existing flags, it only adds to
 # them
-EXTRA_CXXFLAGS=\
+EXTRA_CXXFLAGS='
    -std=c++11
+   '
 
 
 # ######################################################################
 # You can add in extra flags to the linker here, for the library. This
 # does not override the existing flags, it adds to them.
 #
-EXTRA_LIB_LDFLAGS=\
+EXTRA_LIB_LDFLAGS='
+   '
 
 
 # ######################################################################
 # You can add in extra flags to the linker here, for the programs. This
 # does not override the existing flags, it adds to them.
 #
-EXTRA_PROG_LDFLAGS=\
+EXTRA_PROG_LDFLAGS='
+   '
 
 
 # ######################################################################
