--- a/small/build.config
+++ b/small/build.config
@@ -4,6 +4,28 @@ PROJNAME=skeleton
 VERSION=3.14.59
 
 # ######################################################################
+# These are used to create packages.
+
+# First, the maintainer and project details
+MAINTAINER=maintainer-email@address.org
+HOMEPAGE=http://www.homepage.nonexistent.com
+
+# The section that this software belongs in
+SECTION=custom
+
+# Define a description that will go into the package.
+define DESCRIPTION
+A full description of your project.
+
+The first line is a short synopsis of this project. Everything after is
+a comprehensive description of the project.
+
+Note that multiline works properly, and that any indentation herein
+is preserved.
+
+endef
+
+# ######################################################################
 # Set the main (executable) source files. These are all the source files
 # that have a 'main' function. Note that you must specify the filename
 # without the extension, so don't specify 'myfile.c', just specify
