--- a/small/build.config
+++ b/small/build.config
@@ -14,6 +14,7 @@ HOMEPAGE=http://www.homepage.nonexistent.com
 SECTION=custom
 
 # Define a description that will go into the package.
+#
 define DESCRIPTION
 A full description of your project.
 
@@ -21,7 +22,8 @@ The first line is a short synopsis of this project. Everything after is
 a comprehensive description of the project.
 
 Note that multiline works properly, and that any indentation herein
-is preserved.
+is preserved. To produce verbatim text indent each line with a single
+space character.
 
 endef
 
