--- a/small/build.config
+++ b/small/build.config
@@ -7,11 +7,19 @@ VERSION=3.14.59
 # These are used to create packages.
 
 # First, the maintainer and project details
-MAINTAINER=maintainer-email@address.org
+MAINTAINER=maintainer <maintainer-email@address.org>
 HOMEPAGE=http://www.homepage.nonexistent.com
 
 # The section that this software belongs in
 SECTION=custom
+
+# The dependencies for this software to run (not build). The dependencies for
+# building are specified below in the EXTRA_LIBS section (and entries for build
+# dependencies have to be in the HEADERS field).
+#
+# The dependencies must be specified as a comma-seperated list of package names,
+# with an optional version of that package in parenthesis.
+DEPENDS=
 
 # Define a description that will go into the package.
 #
