Added support for SWIG. Tested only with jni.

--- a/small/Makefile
+++ b/small/Makefile
@@ -141,6 +141,9 @@ STCLNK_TARGET:=lib$(PROJNAME)-$(VERSION).a
 DYNLNK_NAME:=$(OUTLIB)/lib$(PROJNAME)$(LIB_EXT)
 STCLNK_NAME:=$(OUTLIB)/lib$(PROJNAME).a
 
+ifneq ($(SWIG_WRAPPERS),)
+	SWIG_OBJECTS:=swig_$(PROJNAME)
+endif
 
 # ######################################################################
 # Declare the intermediate outputs
@@ -153,13 +156,13 @@ BIN_CPPOBS:=\
 BINOBS:=$(BIN_COBS) $(BIN_CPPOBS)
 
 COBS:=\
-	$(foreach fname,$(LIBRARY_OBJECT_CSOURCEFILES),$(OUTOBS)/$(fname).o)
+	$(foreach fname,$(LIBRARY_OBJECT_CSOURCEFILES) $(SWIG_OBJECTS),$(OUTOBS)/$(fname).o)
 
 CPPOBS:=\
 	$(foreach fname,$(LIBRARY_OBJECT_CPPSOURCEFILES),$(OUTOBS)/$(fname).o)
 
-OBS:=$(COBS) $(CPPOBS)
-ALL_OBS:=$(OBS) $(BINOBS)
+OBS=$(COBS) $(CPPOBS)
+ALL_OBS=$(OBS) $(BINOBS)
 DEPS:=\
 	$(subst $(OUTOBS),src,$(subst .o,.d,$(ALL_OBS)))
 
@@ -202,7 +205,7 @@ CXX:=$(GXX)
 PROG_LD=$(GCC_LD_PROG)
 LIB_LD=$(GCC_LD_LIB)
 
-INCLUDE_DIRS:=\
+INCLUDE_DIRS:= -I.\
 	$(foreach ipath,$(INCLUDE_PATHS),-I$(ipath))
 
 LIBDIRS:=\
@@ -237,10 +240,12 @@ help: real-help
 
 debug:	CFLAGS+= -ggdb -DDEBUG
 debug:	CXXFLAGS+= -ggdb -DDEBUG
+debug:	$(SWIG_WRAPPERS)
 debug:	all
 
 release:	CFLAGS+= -O3
 release:	CXXFLAGS+= -O3
+debug:	$(SWIG_WRAPPERS)
 release:	all
 
 # ######################################################################
@@ -262,7 +267,7 @@ real-help:
 
 real-all:	$(OUTDIRS) $(DYNLIB) $(STCLIB) $(BINPROGS)
 
-all:	real-all
+all:	$(SWIG_WRAPPERS) real-all
 	@$(ECHO) "[$(CYAN)Soft linking$(NONE)]    [$(STCLNK_TARGET)]"
 	@ln -f -s $(STCLNK_TARGET) $(STCLNK_NAME)
 	@$(ECHO) "[$(CYAN)Soft linking$(NONE)]    [$(DYNLNK_TARGET)]"
@@ -304,6 +309,7 @@ real-show:
 	@$(ECHO) "$(GREEN)OUTBIN$(NONE)       $(OUTBIN)"
 	@$(ECHO) "$(GREEN)OUTLIB$(NONE)       $(OUTLIB)"
 	@$(ECHO) "$(GREEN)OUTOBS$(NONE)       $(OUTOBS)"
+	@$(ECHO) "$(GREEN)SWIG_OBJECTS$(NONE) $(SWIG_OBJECTS)"
 	@$(ECHO) "$(GREEN)OUTDIRS$(NONE)      "
 	@for X in $(OUTDIRS); do $(ECHO) "              $$X"; done
 	@$(ECHO) "$(GREEN)DEPS$(NONE)      "
@@ -361,6 +367,15 @@ debian-package:
 debug-package:	debug debian-package
 release-package:	release debian-package
 
+swig_prep:
+	@$(ECHO) "[$(CYAN)SWIG$(NONE)        ]    [ <- ./src/"'*.h]'
+	@mkdir -p wrappers
+
+$(SWIG_WRAPPERS):	swig_prep
+	@mkdir -p wrappers/`echo $@ | cut -f 2 -d -`
+	@swig -o src/swig_$(PROJNAME).c -`echo $@ | cut -f 2 -d -` -outdir wrappers/`echo $@ | cut -f 2 -d -` swig-input.swig
+
+
 src/%.d: src/%.c
 	@$(ECHO) "[$(RED)Dependency$(NONE)  ]    [$@]"
 	@$(CC) $(CFLAGS) -MM -MF $@ -MT $(OUTOBS)/$*.o $< ||\
@@ -407,10 +422,10 @@ $(OUTDIRS):
 		($(ECHO) "$(INV)$(RED)[mkdir failure]   [$@]$(NONE)" ; exit 127)
 
 clean-release:
-	@rm -rfv release
+	@rm -rfv release wrappers
 
 clean-debug:
-	@rm -rfv debug
+	@rm -rfv debug wrappers
 
 clean-all:	clean-release clean-debug
 	@rm -rfv include
