--- a/small/build.config
+++ b/small/build.config
@@ -107,9 +107,12 @@ HEADERS=\
 # home directory. $(HOME) works correctly on Windows as well.
 #
 # You can put as many paths in here as you want to. I've put one in as an
-# example.
+# example (to my home directory include) and one to the openjdk on my system
+# for jni functionality.
 INCLUDE_PATHS=\
-   $(HOME)/include
+   $(HOME)/include\
+   /usr/lib/jvm/java-11-openjdk-amd64/include\
+   /usr/lib/jvm/java-11-openjdk-amd64/include/linux
 
 # ######################################################################
 # This is similar to the INCLUDE_PATHS you set above, except that it is
@@ -178,7 +181,7 @@ EXTRA_CXXFLAGS=\
 # does not override the existing flags, it adds to them.
 #
 EXTRA_LIB_LDFLAGS=\
-   
+
 
 
 # ######################################################################
@@ -203,6 +206,22 @@ GCC?=gcc
 GXX?=g++
 LD_PROG?=gcc
 LD_LIB?=gcc
+
+# ######################################################################
+# If you need need to call your library from other languages, set the
+# SWIG targets here, using 'wrap-$language' as a target. The SWIG_WRAPPERS
+# can be left empty if this is not needed.
+#
+# Note that to use SWIG:
+#  1. It must be installed,
+#  2. The swig-input.swig file must be modified for your project.
+#
+# An example of basic SWIG usage can be found at:
+#        http://swig.org/tutorial.html
+#
+SWIG_WRAPPERS:=\
+   wrap-java
+
 
 # ######################################################################
 # TODO: Add in a way to override the default linker
