Fixed the generation of skeleton before the running of the dependencies.

--- a/small/Makefile
+++ b/small/Makefile
@@ -375,6 +375,7 @@ $(SWIG_WRAPPERS):	swig_prep
 	@mkdir -p wrappers/`echo $@ | cut -f 2 -d -`
 	@swig -o src/swig_$(PROJNAME).c -`echo $@ | cut -f 2 -d -` -outdir wrappers/`echo $@ | cut -f 2 -d -` swig-input.swig
 
+src/swig_$(PROJNAME).c:	$(SWIG_WRAPPERS)
 
 src/%.d: src/%.c
 	@$(ECHO) "[$(RED)Dependency$(NONE)  ]    [$@]"
