Updated to use INSTALL_PREFIX as set by the user, or default.

--- a/small/build.config
+++ b/small/build.config
@@ -124,7 +124,7 @@ INCLUDE_PATHS=\
 # example. See the variable LIBRARY_FILES to set the actual libraries you
 # want to link in.
 LIBRARY_PATHS=\
-   $(HOME)/lib
+   $(INSTALL_PREFIX)/lib/$(TARGET)
 
 
 # ######################################################################
