Fixes Makefile to include more recent changes from other projects.

--- a/small/build.config
+++ b/small/build.config
@@ -219,8 +219,8 @@ LD_LIB?=gcc
 # An example of basic SWIG usage can be found at:
 #        http://swig.org/tutorial.html
 #
-SWIG_WRAPPERS:=\
-   wrap-java
+# SWIG_WRAPPERS:=\
+# wrap-java
 
 
 # ######################################################################
