--- a/small/build.config
+++ b/small/build.config
@@ -153,7 +153,10 @@ LIBRARY_PATHS=\
 # them
 EXTRA_COMPILER_FLAGS=\
    -DNAME=Value\
-   -W -Wall
+   -W -Wall -Wextra\
+   -Wdouble-promotion\
+   -Wconversion\
+   -Wno-sign-conversion
 
 
 # ######################################################################
