Changes the directory structure of the output.

--- a/small/Makefile
+++ b/small/Makefile
@@ -129,9 +129,9 @@ endif
 
 TARGET:=$(shell $(GCC) -dumpmachine)
 T_ARCH=$(shell $(GCC) -dumpmachine | cut -f 1 -d - )
-OUTLIB:=$(OUTDIR)/lib/$(TARGET)
-OUTBIN:=$(OUTDIR)/bin/$(TARGET)
-OUTOBS:=$(OUTDIR)/obs/$(TARGET)
+OUTLIB:=$(OUTDIR)/$(TARGET)/lib
+OUTBIN:=$(OUTDIR)/$(TARGET)/bin
+OUTOBS:=$(OUTDIR)/$(TARGET)/obs
 OUTDIRS:=$(OUTLIB) $(OUTBIN) $(OUTOBS) include
 
 # ######################################################################
@@ -480,7 +480,7 @@ clean-debug:
 	@rm -rfv debug wrappers
 
 clean-all:	clean-release clean-debug
-	@unlink ./recent || rm -rf ./recent
+	@unlink ./recent &>/dev/null || rm -rfv ./recent
 	@rm -rfv include
 	@rm -rfv `find . | grep "\.d$$"`
 
