Updates build-info defaults to be bare (no quotes).

--- a/small/Makefile
+++ b/small/Makefile
@@ -8,10 +8,10 @@ endif
 export DESCRIPTION
 
 VERSION?=0.0.0
-MAINTAINER?="No maintainer"
-HOMEPAGE?="No homepage"
-DESCRIPTION?="No description"
-SECTION?="custom"
+MAINTAINER?=No maintainer
+HOMEPAGE?=No homepage
+DESCRIPTION?=No description
+SECTION?=custom
 DEPENDS=
 
 export DESCRIPTION
